-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.0.19, 5.5, 10.0, 10.1
-
Component/s: Partitioning, Storage Engine - InnoDB
-
Labels:
-
Environment:Linux
-
Sprint:10.0.23
There is a problem when performing a binary copy of the data directory from a 5.5.28 windows machine to Linux machine running 10.0.19.
MariaDB complains of partition names and the crashes on a specific insert.
They have generated a core file and the error log that are in the 20152012.zip file. A dump of the schema definitions is in schema_dump_20151125.7z and the crash can be seen in Linux_Slave.out.
Here is the stack trace when I reproduce it:
Thread pointer: 0x0x7f00d83a4008
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7f00f2223e50 thread_stack 0x48000
|
mysys/stacktrace.c:247(my_print_stacktrace)[0xbca37e]
|
sql/signal_handler.cc:153(handle_fatal_signal)[0x71fe5c]
|
/lib/x86_64-linux-gnu/libpthread.so.0(+0x10340)[0x7f00f1e82340]
|
handler/ha_innodb.cc:7487(ha_innobase::write_row(unsigned char*))[0x8b2336]
|
sql/handler.cc:5963(handler::ha_write_row(unsigned char*))[0x728113]
|
sql/ha_partition.cc:4166(ha_partition::write_row(unsigned char*))[0xb59621]
|
sql/handler.cc:5963(handler::ha_write_row(unsigned char*))[0x728113]
|
sql/sql_insert.cc:1848(write_record(THD*, TABLE*, st_copy_info*))[0x57d391]
|
sql/sql_insert.cc:965(mysql_insert(THD*, TABLE_LIST*, List<Item>&, List<List<Item> >&, List<Item>&, List<Item>&, enum_duplicates, bool))[0x58591f]
|
sql/sql_parse.cc:3457(mysql_execute_command(THD*))[0x59e47e]
|
sql/sql_parse.cc:6529(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x59f866]
|
sql/sql_parse.cc:1310(dispatch_command(enum_server_command, THD*, char*, unsigned int))[0x5a1797]
|
sql/sql_parse.cc:999(do_command(THD*))[0x5a1ed9]
|
sql/sql_connect.cc:1375(do_handle_one_connection(THD*))[0x66bfd4]
|
sql/sql_connect.cc:1291(handle_one_connection)[0x66c112]
|
/lib/x86_64-linux-gnu/libpthread.so.0(+0x8182)[0x7f00f1e7a182]
|
/lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7f00f0d5647d]
|
- relates to
-
MDEV-9471 Server crashes or returns an error while trying to alter partitioning on a table moved from Windows to Linux
-
- Closed
-